# resumerocket4

./: ..replit.525196228~  .coverage  .eslintrc.json  .gitignore  .replit  app.py  main.py  main.py.backup  package-lock.json  package.json  project_handoff_summary.md  project_status_summary.md  pyproject.toml  replit.nix  requirements.txt  resume_rocket_handoff.md  roadmap.md  run.py  status_report_jan_07_2025.md  status_report_jan_09_2025.md  test.py  test_endpoints.py  test_flask.py  test_upload.py
.streamlit/: config.toml  secrets.toml
__tests__/: index.test.tsx
app/: __init__.py  ai_processor.py  config.py  models.py  routes.py
attached_assets/: Pasted--Recent-Development-Progress-Parser-Implementation-Challenges-1-Contact-Information-Extra-1736206656724.txt  Pasted--Resume-Parsing-and-Analysis-Requirements-Overview-You-are-tasked-with-parsing-and-analyzing-1736092003496.txt  Pasted--ResumeRocket5-Project-Status-Summary-January-06-2025-Chat-Summary-Progress-Recent-De-1736198598850.txt  Pasted--ResumeRocket5-Project-Status-Summary-January-07-2025-Executive-Overview-Over-the-pas-1736298717798.txt  Pasted--ResumeRocket5-Project-Status-Summary-January-07-2025-Executive-Overview-Over-the-pas-1736298969186.txt  Pasted--ResumeRocket5-Project-Status-Summary-January-07-2025-Executive-Overview-Over-the-pas-1736299109157.txt  Pasted--ResumeRocket5-Resume-Parser-Upload-your-resume-and-get-structured-information-with-AI-powered-a-1736126895709.txt  Pasted-In-the-main-py-file-you-need-to-make-two-specific-updates-First-Update-CSS-Section-Look-f-1737662081532.txt  (+12 more)
(+30 files in other folders)
