[project]
name = "repl-nix-githubimporter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "logging>=0.4.9.6",
    "pypdf2>=3.0.1",
    "python-docx==1.0.1",
    "python-dotenv==1.0.0",
    "reportlab>=4.2.5",
    "streamlit==1.29.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.1",
    "typing>=3.10.0.0",
]